# tokenfence-studio

./: .gitignore  CHANGELOG.md  FAST_TRACK_ROADMAP.zh-CN.md  FILES_TO_UPLOAD.txt  LICENSE  MACOS_RELEASE_CHECKLIST_v2.0.zh-CN.md  MANIFEST.sha256  MANIFEST.txt  PATCH_FILE_LIST.txt  PATCH_FILE_MANIFEST.sha256  PATCH_SHA256SUMS.txt  PATCH_UPLOAD_README.md  PUBLISH_RELEASE_GUIDE.md  README.md  README.zh-CN.md  README_UPLOAD_GUIDE.md  RENAME_TO_CHRIS_STUDIO.zh-CN.md  START_HERE.zh-CN.md  UPLOAD_COMPLETE_PACKAGE.md  UPLOAD_V2.2.0_INTEL_DMG_FIX.zh-CN.md  UPLOAD_V2.2.0_MANUAL_ACCEPTANCE_FIX.zh-CN.md  V1.7.0_CHANGE_SUMMARY.zh-CN.md  V2.0.0_CHANGE_SUMMARY.zh-CN.md  V2.2.0_MANUAL_ACCEPTANCE_FIX_CHANGE_SUMMARY.zh-CN.md  VALIDATION_REPORT_v2.2.0_INTEL_DMG_FIX.zh-CN.md  VALIDATION_REPORT_v2.2.0_MANUAL_ACCEPTANCE_FIX.zh-CN.md  fix_readmes.py  fix_v21.py  next-env.d.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.base.json  verify_public.py
.github/workflows/: ci.yml  release.yml  tokenfence-macos.yml
apps/android/: App.tsx  app.json  babel.config.js  eas.json  package.json  tsconfig.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/web/: package.json  tsconfig.json
cli/: tokenfence.ts
docs/: INTERVIEW_NOTES.md  PRODUCT_ACCEPTANCE.md  RELEASES.md  RELEASE_CHECKLIST.md  agent-bridge.md  agent-runtime.md  computer-use-permissions.md  design-inspiration.md  media-collector.md  mindmap-generator.md  model-router.md  obsidian-connector.md  output-plugins.md  plugin-system.md  providers.md  security.md
docs/architecture/: IMPLEMENTATION_STATUS_v2.0.md  IMPLEMENTATION_STATUS_v2.0.zh-CN.md  OPEN_SOURCE_INSPIRATION.md  ROADMAP_v1.7.md  ROADMAP_v2.0.md
docs/changelog/: 2026-06-01-initial-preflight-workflow.md  2026-06-02-model-matrix-and-provider-presets.md  2026-06-08-built-in-ocr-and-document-parsing.md  2026-06-08-document-intelligence-pipeline.md  2026-06-11-android-mobile-lite-and-responsive-web.md  2026-06-11-app-storage-file-routing-release-workflow.md  2026-06-11-readme-roadmap-and-release-polish.md  README.md
docs/competition/: IMPLEMENTATION_REPORT.md  VERIFICATION_REPORT_v1.6.1.md
docs/development/: v2.2-final-acceptance.zh-CN.md
docs/macos/: MACOS_BUILD_AND_TEST.md  SIGNING_NOTARIZATION.md  (+1 more)
examples/: meeting-note.txt
mcp/: server.ts
scripts/: _make_verify_html.py  _take_screenshots.py  build-macos.sh  check_shortcuts.ps1  finalize-v2-2-repository.sh  package-macos-release.sh  release_sanity.js  source_guard.js  update_shortcuts.ps1  verify-macos-bundle-workflow.cjs  verify_raw_commit.js  verify_tokenfence_patch.py
(+204 files in other folders)
