[package]
name = "tokenfence-studio"
version = "1.6.1"
description = "TokenFence Studio — Safe AI Workspace"
authors = ["TokenFence Studio Contributors"]
license = "MIT"
repository = "https://github.com/Chrisbetheking/tokenfence-studio"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2.12", features = ["json"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
