[package]
name = "chris-studio"
version = "2.0.0"
description = "Chris Studio — Safe AI Workspace"
authors = ["Chris Studio Contributors"]
license = "MIT"
repository = "https://github.com/Chrisbetheking/chris-studio"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["dialog-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2.12", features = ["json"] }
url = "2"
base64 = "0.22"

# main.rs uses the keyring crate for provider_secret_save/load/delete.
# Keep the native backend target-specific so Linux verification does not
# pull platform credential-store implementations into the build.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
